# configure

./: README.md  compSGS.sh  decaddr.sh  dlflash.sh  downfiles.sh  fcitxmilk.fskin  firefox-shm.sh  flee.fskin  fonts.conf  gentoo-mirror.sh  iconvmv  killproc.sh  lddso.sh  letvdl.sh  linuxeden  mentohust工具.c  nicmonitor  onvideo.sh  pentadactylrc  playlist.sh  qsanguosha.sh  screenshot.sh  text2html.sh  urlefmv  vimperatorrc  vimrc  vswf  weather.sh  zshrc
Windows/: AutoKiller源代码.7z  CDCtrl.7z  FileTimeMgr.7z  FindFile.7z  GHack.7z  GHackKiller.7z  GetDiskInfo.7z  GetFunAddr.7z  RDwpt.7z  TaskManager.7z  exe2cpp.7z
fvwm/: comptonrc  config  screenshot.sh  time.sh  wallpaper.sh  xmodmaprc  xrdbrc
fvwm/conf/: autostart  bindrc  cursorrc  funcrc  menurc  stylerc  temp
rime/: cangjie5.custom.yaml  cangjie5_custom.dict.yaml  default.custom.yaml  luna_pinyin.custom.yaml  punctuator.yaml  rime.custom.yaml  squirrel.custom.yaml  weasel.custom.yaml
rimeschema/: CMakeLists.txt
rimeschema/lib/yaml/: CMakeLists.txt  yaml_private.h
rimeschema/src/: CMakeLists.txt  front.c  front.h  rimecfg.c  rimecfg.h  rimeschema.c
weather/: Makefile  dlhtml.h  htmlparse.h  process.h  weather.c  weather.h
