cmake_minimum_required(VERSION 2.8)
project(rimeschema)

option(NOLIBYAML "Don't compile libyaml into rimeschema." OFF)
option(USE_GTK3 "Use GTK3 instead of GTK2." ON)

include(FindPkgConfig)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
include_directories(${PROJECT_SOURCE_DIR}/lib/)

find_package(PkgConfig REQUIRED)
if(USE_GTK3)
	pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
	include_directories(${GTK3_INCLUDE_DIRS})
	link_directories(${GTK3_LIBRARY_DIRS})
	add_definitions(${GTK3_CFLAGS_OTHER})
	add_definitions(-DENABLE_GTK3_SUPPORT)
	message(STATUS "Enable GTK3 support")
else(NOT USE_GTK3)
	pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
	include_directories(${GTK2_INCLUDE_DIRS})
	link_directories(${GTK2_LIBRARY_DIRS})
	add_definitions(${GTK2_CFLAGS_OTHER})
	message(STATUS "Enable GTK2 support")
endif(USE_GTK3)

if(NOT DEFINED RIME_DATA_DIR)
	find_package(Brise REQUIRED)
	set(RIME_DATA_DIR ${BRISE_DIR})
endif(NOT DEFINED RIME_DATA_DIR)
message(STATUS
	"Precompiler macro RIME_DATA_DIR is set to \"${RIME_DATA_DIR}\"")
add_definitions(-DRIME_DATA_DIR="${RIME_DATA_DIR}")

add_definitions("-DHAVE_CONFIG_H")
if(NOLIBYAML)
	message(STATUS "Include yaml support into application")
	add_definitions("-DNOLIBYAML")
else(NOT NOLIBYAML)
	message(STATUS "Use libyaml.so in application")
	add_subdirectory(lib/yaml)
endif(NOLIBYAML)
add_subdirectory(src)
